# rwa_protocol_contracts

./: Cargo.toml  NOTICE
artifacts/: checksums.txt  rwa_protocol_contracts.wasm
scripts/: deploy.sh
src/: contract.rs  error.rs  msg.rs  state.rs
